--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10644,3 +10644,18 @@ a.text-dark:focus {
   }
 }
 
+.slide-fade-enter-active,
+.slide-fade-leave-active {
+  transition: all 0.3s ease;
+}
+
+.slide-fade-enter,
+.slide-fade-leave-to {
+  transform: translateX(10px);
+  opacity: 0;
+}
+
+.toasted-container.top-right {
+  top: 7% !important;
+}
+
