--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,10 +2,11 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
-@import 'variables';
+@import 'solarized/_variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+//@import url('https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css');
+@import 'solarized/bootstrap.css';
 
 .slide-fade-enter-active, .slide-fade-leave-active {
     transition: all 0.3s ease;
